// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-stepper render horizontal stepper 1`] = `
<wpp-stepper .orientation="horizontal" active-step="1" class="wpp-stepper" completed-steps="0" exportparts="wrapper, inner, indicator" orientation="vertical" step-amount="2">
  <mock:shadow-root>
    <div class="orientation-vertical stepper" part="wrapper">
      <slot part="inner"></slot>
    </div>
  </mock:shadow-root>
  <wpp-step class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
    <mock:shadow-root>
      <div class="step-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index" part="step-index"></span>
        </div>
        <div class="connector connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
  </wpp-step>
  <wpp-step class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
    <mock:shadow-root>
      <div class="step-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index" part="step-index"></span>
        </div>
        <div class="connector connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
  </wpp-step>
  <wpp-step class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
    <mock:shadow-root>
      <div class="step-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index" part="step-index"></span>
        </div>
        <div class="connector connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
  </wpp-step>
  <wpp-step class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
    <mock:shadow-root>
      <div class="step-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index" part="step-index"></span>
        </div>
        <div class="connector connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
  </wpp-step>
</wpp-stepper>
`;

exports[`wpp-stepper render step with error 1`] = `
<wpp-stepper .orientation="horizontal" active-step="1" class="wpp-stepper" completed-steps="0" exportparts="wrapper, inner, indicator" orientation="vertical" step-amount="2">
  <mock:shadow-root>
    <div class="orientation-vertical stepper" part="wrapper">
      <slot part="inner"></slot>
    </div>
  </mock:shadow-root>
  <wpp-step class="wpp-step wpp-vertical" error="" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical" substep="">
    <mock:shadow-root>
      <div class="step-wrapper substep-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper with-icon" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
          <div class="icon" part="icon">
            <wpp-icon-error></wpp-icon-error>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index substep" part="step-index"></span>
        </div>
        <div class="connector connector-substep connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
  </wpp-step>
</wpp-stepper>
`;

exports[`wpp-stepper render step with sub-step 1`] = `
<wpp-stepper .active-step="1" .orientation="vertical" class="wpp-stepper" completed-steps="0" exportparts="wrapper, inner, indicator" orientation="vertical">
  <mock:shadow-root>
    <div class="orientation-vertical stepper" part="wrapper">
      <slot part="inner"></slot>
    </div>
  </mock:shadow-root>
  <wpp-step class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
    <mock:shadow-root>
      <div class="step-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index" part="step-index"></span>
        </div>
        <div class="connector connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
    <wpp-step .substep="true" class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
      <mock:shadow-root>
        <div class="step-wrapper" part="wrapper">
          <div class="step-bg" part="step-bg">
            <div class="inactive-text text-wrapper" part="step-label">
              <div part="label-wrapper">
                <slot name="label" part="label"></slot>
              </div>
              <div class="step-description">
                <slot name="description"></slot>
              </div>
            </div>
          </div>
          <div class="step vertical" part="step">
            <span class="step-index" part="step-index"></span>
          </div>
          <div class="connector connector-vertical" part="last-step">
            <span class="connector-line" part="last-step-text"></span>
          </div>
        </div>
        <div class="steps-list-container" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
      <div slot="label">
        <p>
          Sub-step
        </p>
      </div>
    </wpp-step>
  </wpp-step>
</wpp-stepper>
`;

exports[`wpp-stepper render stepper with one step 1`] = `
<wpp-stepper active-step="1" class="wpp-stepper" completed-steps="0" exportparts="wrapper, inner, indicator" orientation="vertical">
  <mock:shadow-root>
    <div class="orientation-vertical stepper" part="wrapper">
      <slot part="inner"></slot>
    </div>
  </mock:shadow-root>
  <wpp-step class="wpp-step wpp-vertical" exportparts="wrapper, step, step-bg, step-index, step-label, optional, icon, last-step, last-step-text, label, label-wrapper, ws-wrapper, ws-inner" orientation="vertical">
    <mock:shadow-root>
      <div class="step-wrapper" part="wrapper">
        <div class="step-bg" part="step-bg">
          <div class="inactive-text text-wrapper" part="step-label">
            <div part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="step-description">
              <slot name="description"></slot>
            </div>
          </div>
        </div>
        <div class="step vertical" part="step">
          <span class="step-index" part="step-index"></span>
        </div>
        <div class="connector connector-vertical" part="last-step">
          <span class="connector-line" part="last-step-text"></span>
        </div>
      </div>
      <div class="steps-list-container" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <p slot="label">
      Step
    </p>
  </wpp-step>
</wpp-stepper>
`;
